--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,5 @@
 samples:
   DRR258591: /home/test/Workspace/long_read_tutorial/data/DRR258591/DRR258591.fastq
 num_cpu: 4
+minimal_read_length: 500
+head_crop: 10
